hard-gists/2638485/run.log
=== Docker Run Log for 2638485 ===
Started at: Mi 29. Okt 13:11:15 CET 2025

[2025-10-29 13:11:15] START: Running container for 2638485
[2025-10-29 13:11:15] SUCCESS: Container 9e32c7f039186601a4d9023af0df46fc57f6f007faabbbc18abadf7866175b76 started for 2638485
=== Container logs for 2638485 ===
  File "/snippet.py", line 35
    print x.shape
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2638485 ===
[2025-10-29 13:11:17] INFO: Container 9e32c7f039186601a4d9023af0df46fc57f6f007faabbbc18abadf7866175b76 has stopped
